--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <!-- <img src="images/logo.png" alt="logo" /> -->
+				<img src="images/new1.jpg" class="w-25 p-3" alt="logo" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -35,18 +35,18 @@
                   <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
                   </li> -->
-                  <!-- <li class="nav-item dropdown">
+                  <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
                      </div>
-                  </li> -->
+                  </li>
                   <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
@@ -67,9 +67,9 @@
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
                   </li> -->
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
-                  </li> -->
+                  </li>
                </ul>
             </div>
         </div>
@@ -79,7 +79,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">About
-				<small>Green Life Forever</small>
+				<small>Green for Life</small>
 			</h1>
 		</div>
 	</div>
@@ -94,7 +94,7 @@
 			</ol>
 		</div>
 		<!-- About Content -->
-		<div class="about-main">
+		<div class="about-main" id="aboutus">
 			<div class="row">
 				<div class="col-lg-6">
 					<img class="img-fluid rounded mb-4" src="images/environment-white2.png" alt="environmental sustainability" />
@@ -113,7 +113,7 @@
 		</div>
 
 		<!-- Team Members -->
-		<div class="team-members-box">  
+		<div class="team-members-box" id="ourteam">  
 			<h2>Our Team</h2>
 			<div class="row">
 				<div class="col-lg-4 mb-4">
@@ -155,7 +155,7 @@
 					<img class="card-img-top" src="images/barde (2).jpg" alt="" />
 					<div class="card-body">
 						<h4 class="card-title">Usman A Barde</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Member</h6>
+						<h6 class="card-subtitle mb-2 text-muted">Board Member</h6>
 						<p class="card-text">A public administrator, business manager with expertise in private practice and administration. As a board member of Green Life awareness, Usama drives biodiversity growth and climate change campaign. </p>
 					</div>
 					<!-- <div class="card-footer">
@@ -167,6 +167,79 @@
 					</div> -->
 				  </div>
 				</div>
+
+				<div class="col-lg-4 mb-4">
+				  <div class="card h-100 text-center">
+					<img class="card-img-top" src="images/saadahtu.jpg" alt="" />
+					<div class="card-body">
+						<h4 class="card-title">Sa'adatu Madaki</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Board Member</h6>
+						<p class="card-text">A Human Rights activist and Entreprenuer, with background in Computer Engineering. As a prominent social media personality, she amplifies the voices of marginalised communities and advocate for justice, equality and sustainability.</p>
+					</div>
+					<!-- <div class="card-footer">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						</ul>
+					</div> -->
+				  </div>
+				</div>
+
+				<div class="col-lg-4 mb-4">
+				  <div class="card h-100 text-center">
+					<img class="card-img-top" src="images/gazali.jpg" alt="" />
+					<div class="card-body">
+						<h4 class="card-title">Gazali Habibu Mika'ilu</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Board Member</h6>
+						<p class="card-text">A Distinguished Microbiologist. he has shown Entreprenuerial vision and commitment to education. Mr. Garzali leverages his skills and experience to support environmental sustainability and conservation through his office at National Agency for the Great Green Wall (N.A.G.G.W)</p>
+					</div>
+					<!-- <div class="card-footer">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						</ul>
+					</div> -->
+				  </div>
+				</div>
+
+				<div class="col-lg-4 mb-4">
+				  <div class="card h-100 text-center">
+					<img class="card-img-top" src="images/abubakar.jpg" alt="" />
+					<div class="card-body">
+						<h4 class="card-title">Abubakar Jibrin</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Board Member</h6>
+						<p class="card-text">A Civil Engineer and and Sheffield Alumnus, UK. He gained expertise in sustainable urban drainage systems (SUDS) and green infrastracture through the Grey Green Initiative in Sheffield. Abubakar advocates for sustainable practices in construction and urban planning.  </p>
+					</div>
+					<!-- <div class="card-footer">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						</ul>
+					</div> -->
+				  </div>
+				</div>
+
+				<div class="col-lg-4 mb-4">
+				  <div class="card h-100 text-center">
+					<img class="card-img-top" src="images/jakada.jpg" alt="" />
+					<div class="card-body">
+						<h4 class="card-title">Dr Hamza jakada</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Board Member</h6>
+						<p class="card-text">An alumnus of China University of Geosciences Wuhan with over 14 years of experience in the environmental and water sectors. Also a member of the Nigerian Institution of Civil Engineers, he has led notable projects including th USAID-funded E-WASH projects.</p>
+					</div>
+					<!-- <div class="card-footer">
+						<ul>
+							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						</ul>
+					</div> -->
+				  </div>
+				</div>
+
 			</div>
 			<!-- /.row -->
 		</div>
@@ -214,22 +287,22 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
 					<!--headin5_amrc ends here-->
 					<ul class="footer_ul2_amrc">
-						<li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p><a href="#">Twitter page</a></p>
-						</li>
+						</li> -->
 						<li>
 							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-							<p><a href="#">Facebook page</a></p>
+							<p><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"> Our Facebook page</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-							<p><a href="#">Instagram page</a></p>
+							<p><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"> Our Instagram page</a></p>
 						</li>
-						<li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-linkedin fleft padding-right"></i> </a>
 							<p><a href="https://www.linkedin.com/greenlife">Linkedin page</a></p>
-						</li>
+						</li> -->
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
@@ -239,10 +312,10 @@
 					<ul class="footer_ul_amrc">
 						<!-- <li><a href="#">Default Version</a></li> -->
 						<!-- <li><a href="#">Boxed Version</a></li> -->
-						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
+						<li><a href="#ourteam">Our Team </a></li>
+						<li><a href="#aboutus">About Us</a></li>
+						<li><a href="index.html#ourservices">Our Services</a></li>
+						<li><a href="contact.html">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
@@ -288,13 +361,12 @@
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
             <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
-				 <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a></li>
+				<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+				<!-- <li><a href="#"><i class="bi bi-tiktok"></i></a></li> -->
+				<li><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
