--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>N & LW Lawn Care - Landscaping Bootstrap4 HTML5 Responsive Template </title>
+	<title>Green Life awareness and climate promotion initiative</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
+              <img src="images/new1.jpg" class="w-25 p-3" alt="logo" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -31,22 +31,22 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
                      </div>
                   </li>
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
                      </a>
@@ -55,8 +55,8 @@
                         <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
                         <a class="dropdown-item" href="blog-post.html">Blog Post</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
@@ -65,7 +65,7 @@
                         <a class="dropdown-item" href="404.html">404</a>
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a class="nav-link active" href="contact.html">Contact</a>
                   </li>
@@ -79,7 +79,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Contact
-				<small>Subheading</small>
+				<small>Green for Life</small>
 			</h1>
 		</div>
 	</div>
@@ -100,22 +100,19 @@
         <!-- Map Column -->
         <div class="col-lg-8 mb-4">
           <!-- Embedded Google Map -->
-          <iframe width="100%" height="300px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
-        </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3950.195689858766!2d8.555350121472943!3d12.004296311803968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sNo.%209%20Wada%20Aliyu%20Road%2C%20Off%20Ahmadu%20Bello%20Way%2C%20Nassarawa%20GRA%2C%20Kano%20State!5e0!3m2!1sen!2sng!4v1746960404262!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4 contact-right">
           <h3>Contact Details</h3>
           <p>
-            3481 Melrose Place
-            <br>Beverly Hills, CA 90210
-            <br>
+            No. 9 Wada Aliyu Road, <br>Off Ahmadu Bello Way, Nassarawa GRA, <br>Kano State.            
           </p>
           <p>
             <abbr title="Phone">P</abbr>: (123) 456-7890
           </p>
           <p>
             <abbr title="Email">E</abbr>:
-            <a href="mailto:name@example.com">name@example.com
+            <a href="mailto:name@example.com">greenislifeinitiative@gmail.com
             </a>
           </p>
           <p>
@@ -127,33 +124,33 @@
 
       <!-- Contact Form -->
       <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-      <div class="row">
+      <div class="row" id="contactus">
         <div class="col-lg-8 mb-4 contact-left">
           <h3>Send us a Message</h3>
-          <form name="sentMessage" id="contactForm" novalidate>
+          <form  action="https://formspree.io/f/xgvkpawn" method="POST">
             <div class="control-group form-group">
               <div class="controls">
-                <label>Full Name:</label>
-                <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+                <label for="name">Full Name:</label>
+                <input type="text" name="name"class="form-control" id="name" required placeholder="Your Name">
                 <p class="help-block"></p>
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
-                <label>Phone Number:</label>
-                <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
+                <label for="tel">Phone Number:</label>
+                <input type="tel" name="tel" class="form-control" id="phone" required placeholder="Your number">
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
                 <label>Email Address:</label>
-                <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+                <input type="email" name="email" class="form-control" id="email" required placeholder="Your Email">
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
-                <label>Message:</label>
-                <textarea rows="5" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                <label for="message">Message:</label>
+                <textarea name="message" rows="5" cols="100" class="form-control" placeholder="Leave a message here" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="height: 100px;"></textarea>
               </div>
             </div>
             <div id="success"></div>
@@ -175,27 +172,31 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p class="mb10">for your consultation and more about us, you can contact us:</p>
+					<p><i class="fa fa-location-arrow"></i> No. 9 Wada Aliyu Road, Off Ahmadu Bello Way, Nassarawa GRA, Kano State.</p>
+					<p><i class="fa fa-phone"></i> +234-7068692823 </p>
+					<p><i class="fa fa fa-envelope"></i> greenislifeinitiative@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
 					<!--headin5_amrc ends here-->
 					<ul class="footer_ul2_amrc">
-						<li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p><a href="#">Twitter page</a></p>
+						</li> -->
+						<li>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+							<p><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d">Facebook page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+							<p><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr">Instagram page</a></p>
 						</li>
-						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
+						<!-- <li>
+							<a href="#"><i class="fab fa-linkedin fleft padding-right"></i> </a>
+							<p><a href="https://www.linkedin.com/greenlife">Linkedin page</a></p>
+						</li> -->
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
@@ -203,12 +204,12 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
-						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
+						<!-- <li><a href="#">Default Version</a></li> -->
+						<!-- <li><a href="#">Boxed Version</a></li> -->
+						<li><a href="about.html#ourteam">Our Team </a></li>
+						<li><a href="about.html#aboutus">About Us</a></li>
+						<li><a href="index.html#ourservices">Our Services</a></li>
+						<li><a href="#contactus">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
@@ -218,29 +219,29 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/green1.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p>How to find best location for plantation</p>
+								<span>22 Sep 2022</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/green lectures.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p>Environmental Sustainability lectures in kano.</p>
+								<span>15 Oct 2023</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/award.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p>Presentation of award to the emir on Green Life awareness in Kano </p>
+								<span>Sep Jan 2024</span>
 							</div>
 						</li>
 					</ul>
@@ -250,17 +251,16 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">N & LW Lawn Care</a> Design By : 
-				<a href="https://html.design/">html design</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
             </p>
             <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a></li>
+				<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+				<!-- <li><a href="#"><i class="fab fa-tiktok"></i></a></li> -->
+				<li><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
@@ -272,5 +272,15 @@
 <!-- Contact form JavaScript -->
 <script src="js/jqBootstrapValidation.js"></script>
 <script src="js/contact_me.js"></script>
+
+<script>
+    window.onbeforeunload = () => {
+        for(const form of document.getElementsByTagName('form')) {
+          form.reset();
+        }
+    }
+
+    </script>
+    
 </body>
 </html>
