--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <!-- <img src="images/logo.png" alt="logo" /> -->
+            <img src="images/new1.jpg" class="w-25 p-3" alt="logo" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -36,19 +36,18 @@
                   <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
                   </li> -->
-
-                  <!-- <li class="nav-item dropdown">
+                  <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
                      </div>
-                  </li> -->
+                  </li>
                   <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
@@ -69,9 +68,9 @@
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
                   </li> -->
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
-                  </li> -->
+                  </li>
                </ul>
             </div>
         </div>
@@ -193,7 +192,7 @@
             <!-- /.row -->
         </div>
         <!-- Portfolio Section -->
-        <div class="portfolio-main">
+        <div class="portfolio-main" id="ourservices">
             <h2>Our Portfolio</h2>
             <div class="row">
                <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -291,12 +290,12 @@
         </div>
         <hr>
         <!-- Get In Touch Now Section -->
-        <div class="row mb-4">
+        <div class="row mb-4" id="getintouch">
             <div class="col-md-8">
                <p>We're a globally-minded organization that thrives on teamwork and partnerships. If you're passionate about saving the environment, we'd be delighted to explore ways to work together. Let's stay connected!</p>
             </div>
             <div class="col-md-4">
-               <a class="btn btn-lg btn-secondary btn-block" href="#">Get In Touch Now</a>
+               <a class="btn btn-lg btn-secondary btn-block" href="contact.html">Get In Touch Now</a>
             </div>
         </div>
     </div>
@@ -317,22 +316,22 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
 					<!--headin5_amrc ends here-->
 					<ul class="footer_ul2_amrc">
-						<li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p><a href="https://twitter.com/greenlife">Twitter page</a></p>
-						</li>
+						</li> -->
 						<li>
 							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-							<p><a href="https://www.facebook.com/greenlife/"> Facebook page</a></p>
+							<p><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"> Our Facebook page</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-							<p><a href="https://www.instagram.com/greenlife/"> Instagram page</a></p>
+							<p><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"> Our Instagram page</a></p>
 						</li>
-                  <li>
+                  <!-- <li>
 							<a href="#"><i class="fab fa-linkedin fleft padding-right"></i> </a>
 							<p><a href="https://www.linkedin.com/greenlife">Linkedin page</a></p>
-						</li>
+						</li> -->
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
@@ -342,10 +341,10 @@
 					<ul class="footer_ul_amrc">
 						<!-- <li><a href="#">Default Version</a></li> -->
 						<!-- <li><a href="#">Boxed Version</a></li> -->
-						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
+						<li><a href="about.html#ourteam">Our Team </a></li>
+						<li><a href="about.html#aboutus">About Us</a></li>
+						<li><a href="#ourservices">Our Services</a></li>
+						<li><a href="#getintouch">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
@@ -387,17 +386,17 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
+				<!-- <a href="#"><img src="images/emptybg.png" class="w-25" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
             <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
                 <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a></li>
+				<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+				<!-- <li><a href="#"><i class="bi bi-tiktok"></i></a></li> -->
+				<li><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
