--- a/portfolio-2-col.html
+++ b/portfolio-2-col.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>N & LW Lawn Care - Landscaping Bootstrap4 HTML5 Responsive Template </title>
+	<title>Green Life awareness and climate promotion initiative</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
+            <img src="images/new1.jpg" class="w-25 p-3" alt="logo" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -31,22 +31,22 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item dropdown">
                      <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a> -->
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
                      </div>
                   </li>
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
                      </a>
@@ -55,8 +55,8 @@
                         <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
                         <a class="dropdown-item" href="blog-post.html">Blog Post</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
@@ -65,7 +65,7 @@
                         <a class="dropdown-item" href="404.html">404</a>
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
                   </li>
@@ -78,8 +78,8 @@
 	<div class="full-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3">Portfolio 2
-				<small>Subheading</small>
+			<h1 class="mt-4 mb-3">Take Action
+				<small>Green for Life</small>
 			</h1>
 		</div>
 	</div>
@@ -98,76 +98,115 @@
       <div class="row">
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-01.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top " src="images/nature.jpg" alt="carbon footprint" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Reduce Your Carbon Footprint.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">One of the most effective ways to combat climate change is to reduce your carbon footprint. This can be achieved by making simple changes to your daily habits, such as:
+                <ul>
+                  <li>Using public transport, cycling, or walking instead of driving.<br></li>
+                  <li>Reducing energy consumption by turning off lights and electronics when not in use.</li>
+                  <li>Using energy-efficient appliances and light bulbs, e.t.c</li>
+                </ul>
+                </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-02.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top" src="images/renewable.jpg" alt="ecology" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Use Renewable Energy Sources.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <p class="card-text">Renewable energy sources like solar and wind power are becoming increasingly cost-effective and efficient. Consider:
+                <ul>
+                  <li>Installing solar panels on your home or business.</li>
+                  <li>Investing in renewable energy credits or carbon offset programs.</li>
+                  <li>Supporting companies that use renewable energy sources.</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-03.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top" src="images/water.jpg" alt="water conservation" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Conserve Water and Reduce Waste.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">Conserving water and reducing waste are crucial steps in mitigating the effects of climate change. You can:
+                <ul>
+                  <li>Take shorter showers and fix leaks to save water.</li>
+                  <li>Reduce your use of single-use plastics.</li>
+                  <li>Recycle and compost as much as possible.</li>
+                  <li>Avoid buying products with excessive packaging.</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-04.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top" src="images/sustainable-development-goals-still.jpg" alt="" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Support Climate-Friendly Policies and Politicians.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <p class="card-text">Using your voice to advocate for climate-friendly policies and politicians can have a significant impact. You can:
+                <ul>
+                  <li>Contact your representatives and express your support for climate legislation</li>
+                  <li>Participate in climate protests and rallies.</li>
+                  <li>Educate others about the importance of climate action</li>
+                  <li>Vote for politicians who prioritize climate action</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-01.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top" src="images/products.jpg" alt="" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Invest in Sustainable Products and Services.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <p class="card-text">The products and services you choose can have a significant impact on the environment. Consider:
+                <ul>
+                  <li>Buying sustainable clothing and textiles.</li>
+                  <li>Investing in eco-friendly cleaning products and personal care products.</li>
+                  <li>Supporting companies that prioritize sustainability and environmentally-friendly practices.</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="images/portfolio-big-02.jpg" alt="" /></a>
+            <a href="#"><img class="card-img-top" src="images/green-education.jpg" alt="" /></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Morbi eu nulla ac mauris euismod aliquet.</a>
+                <a href="#">Educate Yourself and Others.</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <p class="card-text">Finally, educating yourself and others about climate change is crucial to building a more sustainable future. You can:
+                <ul>
+                  <li>Read books and articles about climate change</li>
+                  <li>Watch documentaries and films about climate change</li>
+                  <li>Share climate-related content on social media</li>
+                  <li>Participate in online forums and discussions about climate change</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
       </div>
       <!-- /.row -->
 
-		<div class="pagination_bar">
+		<!-- <div class="pagination_bar"> -->
 			<!-- Pagination -->
-			<ul class="pagination justify-content-center">
+			<!-- <ul class="pagination justify-content-center">
 				<li class="page-item">
 				  <a class="page-link" href="#" aria-label="Previous">
 					<span aria-hidden="true">&laquo;</span>
@@ -189,8 +228,8 @@
 					<span class="sr-only">Next</span>
 				  </a>
 				</li>
-			</ul>
-		</div>
+			</ul> -->
+		<!-- </div> -->
     </div>
     <!-- /.container -->
 
@@ -201,27 +240,35 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p class="mb10">for your consultation and more about us, you can contact us:</p>
+					<p><i class="fa fa-location-arrow"></i> No. 9 Wada Aliyu Road, Off Ahmadu Bello Way, Nassarawa GRA, Kano State.</p>
+					<p><i class="fa fa-phone"></i> +234-7068692823</p>
+					<p><i class="fa fa fa-envelope"></i> greenislifeinitiative@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
 					<!--headin5_amrc ends here-->
 					<ul class="footer_ul2_amrc">
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+							<p><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"> Our Facebook page</a></p>
 						</li>
 						<li>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+							<p><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"> Our Instagram page</a></p>
+						</li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
+						</li> -->
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
+						</li> -->
+						<!-- <li>
+							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+						</li> -->
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
@@ -229,12 +276,12 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
-						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
+						<!-- <li><a href="#">Default Version</a></li> -->
+						<!-- <li><a href="#">Boxed Version</a></li> -->
+						<li><a href="about.html#ourteam">Our Team </a></li>
+						<li><a href="about.html#aboutus">About Us</a></li>
+						<li><a href="index.html#ourservices">Our Services</a></li>
+						<li><a href="contact.html">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
@@ -244,29 +291,29 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/green1.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p> How to find best location for plantation</p>
+								<span>22 Sep 2022</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/green lectures.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p> Environmental Sustainability lectures in kano.</p>
+								<span>15 Oct 2023</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/award.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p> Presentation of award to the emir on Green Life awareness in Kano </p>
+								<span>Sep Jan 2024</span>
 							</div>
 						</li>
 					</ul>
@@ -276,17 +323,17 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">N & LW Lawn Care</a> Design By : 
-				<a href="https://html.design/">html design</a>
+           <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
+                <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a></li>
+				<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+				<!-- <li><a href="#"><i class="bi bi-tiktok"></i></a></li> -->
+				<li><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
