--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>N & LW Lawn Care - Landscaping Bootstrap4 HTML5 Responsive Template </title>
+	<title>Green Life awareness and climate promotion initiative</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
@@ -19,13 +19,13 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
+            <img src="images/new1.jpg" class="w-25 p-3" alt="logo" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
+               <ul class="navbar-nav ml-auto ">
                   <li class="nav-item">
                      <a class="nav-link" href="index.html">Home</a>
                   </li>
@@ -35,19 +35,22 @@
                   <li class="nav-item">
                      <a class="nav-link active" href="services.html">Services</a>
                   </li>
+				  <!-- <li class="nav-item">
+                     <a class="nav-link active" href="portfolio-2-col.html">Take Action</a>
+                  </li> -->
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
+                        <!-- <a class="dropdown-item" href="portfolio-1-col.html">Projects</a> -->
+                        <a class="dropdown-item" href="portfolio-2-col.html">Take Action</a>
+                        <!-- <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-                     </div>
+                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> -->
+                    </div>
                   </li>
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
                      </a>
@@ -56,8 +59,8 @@
                         <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
                         <a class="dropdown-item" href="blog-post.html">Blog Post</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
@@ -66,7 +69,7 @@
                         <a class="dropdown-item" href="404.html">404</a>
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
                   </li>
@@ -80,7 +83,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Services
-				<small>Subheading</small>
+				<small>Green for life</small>
 			</h1>
 		</div>
 	</div>
@@ -97,7 +100,7 @@
 		</div>
 
 		<!-- Image Header -->
-		<img class="img-fluid rounded mb-4" src="images/services-big.jpg" alt="" />
+		<img class="img-fluid rounded mb-4" src="images/group.jpg" alt="grouping" />
 
 		<!-- Services Section -->
 		<div class="services-bar">
@@ -134,7 +137,7 @@
                </div>
                <div class="col-lg-4 mb-4">
                   <div class="card h-100">
-                     <h4 class="card-header">Garden Supplies</h4>
+                     <h4 class="card-header">Native Seed Supplies</h4>
                      <div class="card-img">
                         <img class="img-fluid" src="images/services-img-03.jpg" alt="" />
                      </div>
@@ -150,9 +153,9 @@
             <!-- /.row -->
         </div>
 		<!-- Our Customers -->
-		<div class="customers-box"> 
-			<h2>Our Customers</h2>
-			<div class="row">
+		<!-- <div class="customers-box">  -->
+			<!-- <h2>Our Customers</h2> -->
+			<!-- <div class="row">
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_01.png" alt="" />
 				</div>
@@ -171,9 +174,9 @@
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_06.png" alt="" />
 				</div>
-			</div>
+			</div> -->
 			<!-- /.row -->
-		</div>
+		<!-- </div> -->
 
     </div>
     <!-- /.container -->
@@ -185,27 +188,35 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p class="mb10">for your consultation and more about us, you can contact us:</p>
+					<p><i class="fa fa-location-arrow"></i> No. 9 Wada Aliyu Road, Off Ahmadu Bello Way, Nassarawa GRA, Kano State.</p>
+					<p><i class="fa fa-phone"></i> +234-7068692823</p>
+					<p><i class="fa fa fa-envelope"></i> greenislifeinitiative@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
 					<!--headin5_amrc ends here-->
 					<ul class="footer_ul2_amrc">
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+							<p><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"> Our Facebook page</a></p>
 						</li>
 						<li>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+							<p><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"> Our Instagram page</a></p>
+						</li>
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
+						</li> -->
+						<!-- <li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
 							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
+						</li> -->
+						<!-- <li>
+							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+						</li> -->
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
@@ -213,8 +224,8 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
+						<!-- <li><a href="#">Default Version</a></li> -->
+						<!-- <li><a href="#">Boxed Version</a></li> -->
 						<li><a href="#">Our Team </a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Our Services</a></li>
@@ -228,29 +239,29 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/green1.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p> How to find best location for plantation</p>
+								<span>22 Sep 2022</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/green lectures.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p> Environmental Sustainability lectures in kano.</p>
+								<span>15 Oct 2023</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/award.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p> Presentation of award to the emir on Green Life awareness in Kano </p>
+								<span>Sep Jan 2024</span>
 							</div>
 						</li>
 					</ul>
@@ -260,17 +271,17 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">N & LW Lawn Care</a> Design By : 
-				<a href="https://html.design/">html design</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
+                <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/share/DLqiqBmWkPJSWuSw/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a></li>
+				<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+				<!-- <li><a href="#"><i class="bi bi-tiktok"></i></a></li> -->
+				<li><a href="https://www.instagram.com/greenislife_initiative?igsh=MTlwcTFhejd4cTdydw%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
